doc for trans cn

--- a/static/doc.htm
+++ b/static/doc.htm
@@ -1,6 +1,6 @@
 
 
-<html>
+<html lang="en">
 <head>
     <title>Swagger UI</title>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/swagger-ui-dist@3.52.5/swagger-ui.css" />
@@ -8,7 +8,7 @@
     <script>
         window.onload = function() {
             const ui = SwaggerUIBundle({
-                url: "doc.yaml",
+                url: "doc.yaml?lang=zh",
                 dom_id: '#swagger-ui',
                 deepLinking: true,
                 presets: [
