--- a/docJvdoc/serialized-form.html
+++ b/docJvdoc/serialized-form.html
@@ -566,7 +566,7 @@ loadScripts(document, 'script');</script>
 <ul class="block-list">
 <li>
 <section class="serialized-class-details" id="util.tx.findByIdExptn">
-<h3>Exception Class&nbsp;<a href="util/tx/findByIdExptn.html" title="class in util.tx">util.tx.findByIdExptn</a></h3>
+<h3>Exception Class&nbsp;<a href="util/tx/findByIdExptn.html" title="class in util.tx">util.tx.findByIdExptn_CantFindData</a></h3>
 <div class="type-signature">class findByIdExptn extends <a href="https://docs.oracle.com/en/java/javase/21/docs/api/java.base/java/lang/Throwable.html" title="class or interface in java.lang" class="external-link">Throwable</a> implements <a href="https://docs.oracle.com/en/java/javase/21/docs/api/java.base/java/io/Serializable.html" title="class or interface in java.io" class="external-link">Serializable</a></div>
 </section>
 </li>
