--- a/docJvdoc/util/tx/findByIdExptn.html
+++ b/docJvdoc/util/tx/findByIdExptn.html
@@ -89,7 +89,7 @@ loadScripts(document, 'script');</script>
 </div>
 <div class="inheritance" title="Inheritance Tree"><a href="https://docs.oracle.com/en/java/javase/21/docs/api/java.base/java/lang/Object.html" title="class or interface in java.lang" class="external-link">java.lang.Object</a>
 <div class="inheritance"><a href="https://docs.oracle.com/en/java/javase/21/docs/api/java.base/java/lang/Throwable.html" title="class or interface in java.lang" class="external-link">java.lang.Throwable</a>
-<div class="inheritance">util.tx.findByIdExptn</div>
+<div class="inheritance">util.tx.findByIdExptn_CantFindData</div>
 </div>
 </div>
 <section class="class-description" id="class-description">
