--- a/docJvdoc/util/proxy/AtProxy4api.html
+++ b/docJvdoc/util/proxy/AtProxy4api.html
@@ -88,7 +88,7 @@ loadScripts(document, 'script');</script>
 <h1 title="Class AtProxy4api" class="title">Class AtProxy4api</h1>
 </div>
 <div class="inheritance" title="Inheritance Tree"><a href="https://docs.oracle.com/en/java/javase/21/docs/api/java.base/java/lang/Object.html" title="class or interface in java.lang" class="external-link">java.lang.Object</a>
-<div class="inheritance">util.proxy.AtProxy4api</div>
+<div class="inheritance">util.proxy.ApiGateway</div>
 </div>
 <section class="class-description" id="class-description">
 <dl class="notes">
