--- a/docJvdoc/index-files/index-12.html
+++ b/docJvdoc/index-files/index-12.html
@@ -223,7 +223,7 @@ loadScripts(document, 'script');</script>
 <dd>&nbsp;</dd>
 <dt><a href="../biz/LogExecutionTime.html" class="type-name-link" title="annotation interface in biz">LogExecutionTime</a> - Annotation Interface in <a href="../biz/package-summary.html">biz</a></dt>
 <dd>&nbsp;</dd>
-<dt><a href="../api/usr/lgnDlgt.html#loginController" class="member-name-link">loginController</a> - Variable in class api.usr.<a href="../api/usr/lgnDlgt.html" title="class in api.usr">lgnDlgt</a></dt>
+<dt><a href="../api/usr/lgnDlgt.html#loginSvs" class="member-name-link">loginSvs</a> - Variable in class api.usr.<a href="../api/usr/lgnDlgt.html" title="class in api.usr">lgnDlgt</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="../api/usr/LoginController.html" class="type-name-link" title="class in api.usr">LoginController</a> - Class in <a href="../api/usr/package-summary.html">api.usr</a></dt>
 <dd>
